# ChangeLog for kde-misc/synaptiks
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/synaptiks/ChangeLog,v 1.9 2010/02/27 13:06:25 ssuominen Exp $

*synaptiks-0.3.2-r1 (27 Feb 2010)

  27 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  +synaptiks-0.3.2-r1.ebuild:
  Change SLOT from 0 to 4.

*synaptiks-0.3.2 (04 Feb 2010)

  04 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  +synaptiks-0.3.2.ebuild:
  Version bump.

*synaptiks-0.3.0 (30 Jan 2010)

  30 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
  +synaptiks-0.3.0.ebuild:
  Version bump.

*synaptiks-0.2.1 (05 Jan 2010)

  05 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
  +synaptiks-0.2.1.ebuild:
  Version bump.

  12 Dec 2009; Jonathan Callen <abcd@gentoo.org>
  -files/synaptiks-0.1.0-Xi.patch:
  Drop old patch

  11 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -synaptiks-0.1.0.ebuild, -synaptiks-0.1.0-r1.ebuild:
  Drop no-longer required ebuild.

*synaptiks-0.2.0 (25 Nov 2009)

  25 Nov 2009; Samuli Suominen <ssuominen@gentoo.org>
  +synaptiks-0.2.0.ebuild:
  Version bump.

*synaptiks-0.1.0-r1 (30 Oct 2009)

  30 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  +synaptiks-0.1.0-r1.ebuild, +files/synaptiks-0.1.0-Xi.patch:
  Port to libXi >= 1.3 wrt #291181, thanks to DaggyStyle for reporting.

*synaptiks-0.1.0 (28 Oct 2009)

  28 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  +synaptiks-0.1.0.ebuild:
  Initial commit (alternative ksynaptics replacement).
