@@ -1,6 +1,12 @@
 # ChangeLog for kde-misc/synaptiks
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/synaptiks/ChangeLog,v 1.9 2010/02/27 13:06:25 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/synaptiks/ChangeLog,v 1.10 2010/04/11 15:15:16 scarabeus Exp $
+
+*synaptiks-0.4.0 (11 Apr 2010)
+
+  11 Apr 2010; Tomáš Chvátal <scarabeus@gentoo.org>
+  +synaptiks-0.4.0.ebuild:
+  Version bump.
 
 *synaptiks-0.3.2-r1 (27 Feb 2010)
 
